# flex-dao

./: .gitignore  README.md  brownie-config.yml  environment.yml  generate-mnemonic.py  networks.yml  pyproject.toml  requirements.txt  smartbch-testnet.md
contracts/: Controller.sol  DAOToken.sol  DailyPayout.sol  DailyPayoutV0.sol  DailyPayoutV1.sol  DailyPayoutV2.sol  Distributor.sol  Distributor.vy  ERC20DAO.vy  Gauge.sol  GaugeProxy.sol  GaugeProxy.vy  LiquidityGauge.sol  LiquidityGauge.vy  Minter.sol  MockOneSplitAudit.sol  ProtocolGovernance.sol  QuarterlyPayout.sol  RevenueShare.sol  RewardShare.sol  RewardToken.sol  StakingRewards.sol  Timelock.sol  fVault.sol  veFLEX.vy
docs/: controller.md  daotoken.md  distributor.md  fvault.md  gauge_proxy.md  liquidity_gauge.md  mock.md  protocol_governance.md  reward_token.md  staking_rewards.md  strategies.md  strategies_and_vaults.md  timelock.md
interfaces/: IChildToken.sol  IController.sol  IConverter.sol  IDistributor.sol  ILiquidityGauge.sol  IMinter.sol  IOneSplitAudit.sol  IStakingRewards.sol  IStrategy.sol  IVault.sol  IVaultConverter.sol  IVested.sol  IVotingEscrow.sol
scripts/: 00-deploy-mock-one-split-audit.py  01-deploy-timelock.py  01-deploy-ve-flex.py  02-deploy-controller.py  02-deploy-reward-token.py  03-deploy-distributor.py  03-deploy-ve-flex.py  03-deploy-voting-escrow.py  04-deploy-controller.py  04-deploy-payout.py  04-deploy-staking-rewards.py  05-deploy-distributor.py  05-deploy-flex-staking-strategy.py  06-deploy-gauge-proxy.py  06-distribution.py  06-ownership-transfer.py  deploy-timelock.py  (+4 more)
(+37 files in other folders)
