[tool.poetry]
name = "flex-dao"
version = "0.1.0"
description = "Testbed and Deployment repository for FLEX DAO"
authors = ["Sitt Guruvanich <sitt@coinflex.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
eth-brownie = "^1.17.0"
bip-utils = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.pytest.ini_options]
addopts = "--tb=short -s"
testpaths = [ "tests" ]
python_files = [ "*.py" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
